# smart-vietnamese-summarizer

./: .env.example  .gitignore  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  main.py  schemas.py
app/: components.py  streamlit_app.py  style.py
configs/: app.yaml  app_lora.yaml  eval.yaml  eval_lora.yaml  eval_lora_holdout.yaml  eval_phase2_epoch2.yaml  train_lora.yaml  train_phase1.yaml  train_phase2.yaml  train_phase2_epoch2.yaml
docs/: ARCHITECTURE.md  BAO_CAO_CHITIET_P1.md  BAO_CAO_CHITIET_P2.md  BAO_CAO_THUYET_TRINH_TONG_HOP.md  DEEP_DIVE_PART1_TRANSFORMER.md  DEEP_DIVE_PART2_SYSTEM.md  ERROR_ANALYSIS.md  EVALUATOR_IMPROVEMENT_PLAN.md  LORA_MIXED_DATA_PLAN.md  OPERATIONS_AND_PHASE2_200_PLAN.md  PHASE2_IMPROVEMENT_PLAN.md  PLAN.md  PLAN2.md  PLAN_V3.md  PRESENTATION_PART1.md  PRESENTATION_PART2.md  PRESENTATION_PART3.md  PROJECT_EXCELLENCE_ROADMAP.md  SYSTEM_OVERVIEW.md  WEEK1_GUIDE.md
notebooks/: 01_dataset_exploration.ipynb  02_training_colab.ipynb  03_error_analysis.ipynb
scripts/: _bootstrap.py  build_lora_mixed_data.py  build_phase2_synthetic_200.py  build_phase2_synthetic_400.py  evaluate.py  evaluate_modes.py  export_model.py  generate_synthetic.py  predict.py  prepare_data.py  summarize_holdout_rubric.py  train.py  train_lora.py  train_phase2.py
tests/: test_api.py  test_app_components.py  test_formatters.py  test_generation.py  test_keyword_extractor.py  test_lora_data_builder.py  test_neuro_symbolic_decoder.py  test_postprocess.py  test_preprocessing.py  test_quality_estimate.py  (+1 more)
(+44 files in other folders)
